--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/logo-header';
 @import './components/site-nav';
 @import './components/contacts-header';
+@import './components/mobile-menu';
 
 /* основной блок */
 @import './components/button';
@@ -21,5 +22,6 @@
 @import './components/modal';
 @import './components/checkbox';
 @import './components/direction';
+@import './components/portfolio-nav'
  
 
