--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -13,7 +13,12 @@ body {
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
-    @media screen and (min-width: 480px){
+    @media screen and (max-width: 480px) {
+            padding-top: 60px;
+            padding-bottom: 60px; 
+        
+    }
+    @media screen  and (min-width: 480px){
         padding-top: 60px;
         padding-bottom: 60px;
     }
