--- a/sass/components/_comand.scss
+++ b/sass/components/_comand.scss
@@ -74,7 +74,7 @@
 
 .social {
         display: flex;
-        justify-content: space-between;
+            justify-content: space-evenly;
         margin-left: 10px;
         margin-top: 16px;
         cursor: pointer;
