--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -21,6 +21,9 @@
     margin-top: 20px;
 }
 .contacts-list{
+    display: flex;
+        flex-direction: column;
+        align-items: center;
 .contacts-list__adress {
         color: var(--header-bg-color);
         font-style: normal;
@@ -41,12 +44,26 @@
     }
 }
 .footer-conteiner {
-    display: flex;
-    align-items: baseline;
+    // display: flex;
+    // align-items: baseline;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        @media screen and (min-width: 1200px) {
+            display: flex;
+                flex-direction:row;
+                align-items:flex-start;
+        }
 }
 .footer-list-contacts {
     display: block;
     margin-bottom: 9px;
+}
+.footer-bg-flex{
+    display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 60px;
 }
 .invisible-header {
     display: none;
@@ -86,13 +103,23 @@
 }
 
 .social-footer {
-    margin-left: 70px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        @media screen and (min-width: 768px){
+            margin-top: 0;
+                margin-bottom: 0;
+                margin-left: 165px;
+        }
+    
 }
 
 .subscription-footer {
     display: flex;
     flex-direction: column;
-    margin-left: 92px;
+    align-items: center;
     .subscription-footer__text {
             margin-bottom: 20px;
             font-weight: 700;
@@ -105,12 +132,15 @@
 }
 .form-footer {
     position: relative;
-    display: flex;
-    align-items: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        
 
     .form-footer__input {
+            margin-bottom: 20px;
             margin-right: 12px;
-            width: 358px;
+            width: 450px;
             height: 50px;
             padding: 15px 15px 16px;
             border-radius: 4px;
@@ -120,7 +150,16 @@
             box-shadow: 0px 4px 4px 0px #00000026;
         }
 }
+.footer-tablet{
+    @media screen and (min-width: 768px) {
+            display: flex;
+            align-items: normal;
+            margin-left: auto;
+            margin-right: auto;
+            
+}
 
+}
 
 
 
