--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -5,15 +5,20 @@
 }
 
 .nav-head {
+    display: none;
     display: flex;
     align-items: center;
 }
 .header__conteiner{
     width: 1200px;
-    display: flex;
+    
     align-items: center;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-}
+    
+    @media screen and (min-width: 768px){
+        display: flex;
+    }
+}   
