--- a/sass/components/_hero-overlay.scss
+++ b/sass/components/_hero-overlay.scss
@@ -1,33 +1,98 @@
 .hero {
     background-color: var(--hero-bg-color);
     text-align: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    
+    padding-top: 118px;
+    padding-bottom: 118px;
     background: rgba(47, 48, 58, 0.4);
-    max-width: 1600px;
-    height: 600px;
+    max-width: 100%;
+    height: 400px;
     margin-right: auto;
     margin-left: auto;
+    background-repeat: no-repeat;
+        background-size: cover;
     background-position: center;
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/bg-image.png);
-
+        url(../../images/overlay-mobile.jpg);
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx){
+                background-image: linear-gradient(to right,
+                            rgba(47, 48, 58, 0.4),
+                            rgba(47, 48, 58, 0.4)),
+                        url(../../images/overlay-mobile-2x.jpg);
+            }
+        
+        @media screen and (min-width: 768px) {
+                width: 768px;
+                height: 400px;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                background-image: linear-gradient(to right,
+                            rgba(47, 48, 58, 0.4),
+                            rgba(47, 48, 58, 0.4)),
+                        url(../../images/overlay-tablet.jpg);
+                        @media (min-device-pixel-ratio: 2),
+                            (min-resolution: 192dpi),
+                            (min-resolution: 2dppx) {
+                                background-image: linear-gradient(to right,
+                                        rgba(47, 48, 58, 0.4),
+                                        rgba(47, 48, 58, 0.4)),
+                                    url(../../images/overlay-tablet-2x.jpg);
+                            }
+            }
+                @media screen and (min-width: 1200px) {
+                width: 1600px;
+                height: 600px;
+                padding-top: 200px;
+                padding-bottom: 200px;
+                background-repeat: no-repeat;
+                    background-size: cover;
+                    background-position: center;
+                background-image: linear-gradient(to right,
+                            rgba(47, 48, 58, 0.4),
+                            rgba(47, 48, 58, 0.4)),
+                        url(../../images/bg-image.png);
+                        @media (min-device-pixel-ratio: 2),
+                            (min-resolution: 192dpi),
+                            (min-resolution: 2dppx) {
+                                background-image: linear-gradient(to right,
+                                        rgba(47, 48, 58, 0.4),
+                                        rgba(47, 48, 58, 0.4)),
+                                    url(../../images/overlay-desk-2x.jpg);
+                            }
+}
 
     .hero__title {
-            width: 696px;
+            width: 360px;
             margin: 0 auto;
             color: var(--header-bg-color);
-            font-weight: 900;
-            font-size: 44px;
-            line-height: 1.36;
-            letter-spacing: 0.06em;
-            text-transform: uppercase;
-        }
-}
+                margin: 0 auto;
+                color: var(--header-bg-color);
+                font-weight: 900;
+                font-size: 26px;
+                line-height: 1.36;
+                letter-spacing: .06em;
+                text-transform:uppercase ;
+                @media screen and (min-width: 768px) {
+                        width: 360px;
+                        height: 84px;
+                    }
+                @media screen and (min-width: 1200px){
+                    width: 696px;
+                    height: 120px;
+                    
+                    font-weight: 900;
+                    font-size: 44px;
+                    line-height: 1.3636;
+                    text-align: center;
+                    letter-spacing: 0.06em;
+                    text-transform: uppercase;
+                }
+}}
 
 
 
