--- a/sass/components/_portfolio-nav.scss
+++ b/sass/components/_portfolio-nav.scss
@@ -5,8 +5,18 @@
 
 .portfolio-nav {
     display: flex;
-    justify-content: center;
-    cursor: pointer;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding-bottom: 40px;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        }
+                @media screen and (min-width: 1200px) {
+                    display: flex;
+                    flex-wrap: nowrap;
+                }
 }
 
 .portfolio-nav__item {
