--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,6 +1,7 @@
 
 
 .card-text {
+    flex-grow: 1;
     padding-left: 24px;
     padding-right: 24px;
     padding-top: 20px;
@@ -72,22 +73,43 @@
     }
 }
 .progects {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -30px;
-    margin-bottom: -30px;
+
+    @media screen and (min-width: 768px) {
+            display: flex;
+                flex-wrap: wrap;
+                margin-right: -30px;
+                margin-bottom: -30px;
+        }
+                @media screen and (min-width: 1200px){
+                    display: flex;
+                        flex-wrap: wrap;
+                        margin-right: -30px;
+                        margin-bottom: -30px;
+                }
+    
 }
 
 .progects__item {
     position: relative;
-    flex-basis: calc((100% - 60px) / 3);
+    margin-bottom: 30px;
+@media screen and (min-width: 768px){
+flex-basis: calc((100% - 60px) / 2);
     margin-right: 30px;
     margin-bottom: 30px;
 }
-
-.progects__item:nth-child(3n) {
-    margin-right: 0;
+ @media screen and (min-width: 1200px){
+    flex-basis: calc((100% - 90px) / 3);
+        margin-right: 30px;
+        margin-bottom: 30px;
+        .progects__item:nth-child(3n) {
+                margin-right: 0;
+            }
+ }
+    
+    
 }
+
+
 
 
 
