--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,6 +1,10 @@
 .site-nav {
-    display: flex;
-    margin-left: 93px;
+    display: none;
+    @media screen and (min-width: 768px){
+        display: flex;
+            margin-left: 93px;
+    }
+    
 
     &__link {
         position: relative;
