--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,7 @@ a {
 }
 
 .header {
+  position: relative;
   background-color: var(--header-bg-color);
   border-bottom: 1px solid var(--border-color);
 }
@@ -173,6 +174,34 @@ a {
   .header__conteiner {
     display: flex;
   }
+}
+
+.gt {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu-mobile {
+  background-color: transparent;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+.menu-mobile .icon-cross {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .menu-mobile {
+    display: none;
+  }
+}
+
+.menu-mobile.is-open .icon-menu {
+  display: none;
+}
+
+.menu-mobile.is-open .icon-cross {
+  display: block;
 }
 
 .logo {
@@ -323,14 +352,15 @@ a {
 }
 
 .mobile-menu {
-  position: fixed;
   z-index: 1;
-  top: 0;
+  position: absolute;
+  display: none;
+  top: 100%;
   left: 0;
+  width: 100%;
   background-color: var(--header-bg-color);
   width: 100vw;
   height: 100vh;
-  padding: 10px 15px 48px 40px;
   overflow-y: auto;
 }
 .mobile-menu .conteiner {
@@ -338,6 +368,15 @@ a {
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
+}
+
+.mobile-menu.is-open {
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu.is-open {
+    display: none;
+  }
 }
 
 .mobile-menu__link {
@@ -395,22 +434,23 @@ a {
 
 .mob-menu-social {
   display: flex;
+  padding-bottom: 48px;
 }
 
-.mob-menu-social__item {
-  position: relative;
-}
-
-.mob-menu-social__item::after {
+.mob-menu-social::before {
   display: block;
   content: " ";
   position: absolute;
   width: 22px;
   height: 1px;
-  left: 50px;
+  left: 0px;
   top: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   transform: rotate(90deg);
+}
+
+.mob-menu-social__item {
+  position: relative;
 }
 
 .mob-menu-social__link {
@@ -442,26 +482,6 @@ a {
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1215686275);
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.0784313725);
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1019607843);
-}
-
-.btn-menu-mob {
-  display: block;
-  margin-left: auto;
-  background-color: transparent;
-  border-color: transparent;
-}
-@media screen and (min-width: 768px) {
-  .btn-menu-mob {
-    display: none;
-  }
-}
-
-.btn-menu-close {
-  display: block;
-  margin-left: auto;
-  margin-bottom: 30px;
-  background-color: transparent;
-  border-color: transparent;
 }
 
 .portfolio-nav__btn {
@@ -521,6 +541,12 @@ a {
   right: 155px;
   top: 82px;
   fill: var(--header-bg-color);
+}
+@media screen and (min-width: 1200px) {
+  .btn-submit-ft__icon {
+    right: 20px;
+    top: 15px;
+  }
 }
 
 .btn-modal {
@@ -1196,11 +1222,25 @@ a {
     margin-left: 165px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .social-footer {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 70px;
+  }
+}
 
 .subscription-footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscription-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+  }
 }
 .subscription-footer .subscription-footer__text {
   margin-bottom: 20px;
@@ -1218,6 +1258,13 @@ a {
   align-items: center;
   flex-direction: column;
 }
+@media screen and (min-width: 1200px) {
+  .form-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+}
 .form-footer .form-footer__input {
   margin-bottom: 20px;
   margin-right: 12px;
@@ -1230,13 +1277,24 @@ a {
   border: 1px solid rgba(255, 255, 255, 0.3019607843);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1490196078);
 }
+@media screen and (min-width: 1200px) {
+  .form-footer .form-footer__input {
+    width: 350px;
+    height: 50px;
+  }
+}
 
 @media screen and (min-width: 768px) {
-  .footer-tablet {
+  .footer-adaptive {
     display: flex;
     align-items: normal;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-adaptive {
+    display: flex;
   }
 }
 
@@ -1246,6 +1304,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
   background-color: var(--backdrop-color);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
