--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,6 @@
 
 .header {
+    position: relative;
     background-color:var(--header-bg-color);
     border-bottom: 1px solid var(--border-color);
 }
@@ -22,3 +23,31 @@
         display: flex;
     }
 }   
+.gt{
+    display: flex;
+        justify-content: space-between;
+}
+.menu-mobile {
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+
+    .icon-cross {
+        display: none;
+    }
+    
+        .icon-menu {
+
+        }
+    @media screen and (min-width: 768px) {
+        display: none;
+
+    }
+}
+.menu-mobile.is-open .icon-menu{
+    display: none;
+}
+.menu-mobile.is-open .icon-cross{
+    display: block;
+}
