--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,13 +1,17 @@
 .mobile-menu{
-    position: fixed;
     z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: var(--header-bg-color);
+    position: absolute;
+     display: none;
+     top: 100%;
+     left: 0;
+     width: 100%;
+    
+     background-color: var(--header-bg-color);
     width: 100vw;
     height: 100vh;
-    padding: 10px 15px 48px 40px;
+        
     overflow-y: auto;
+    
     .conteiner{
         display: flex;
         flex-direction: column;
@@ -15,7 +19,12 @@
         justify-content: space-between;
     }
 }
-
+.mobile-menu.is-open {
+    display: block;
+    @media screen and (min-width: 768px) {
+            display: none;
+        }
+}
 .mobile-menu__link{
 color: var(--title-text-color);
     font-weight: 500;
@@ -74,36 +83,26 @@ color: var(--title-text-color);
 .mob-menu-social {
     
         display: flex;
+        padding-bottom: 48px;
 
     
 }
-// .mob-menu-social::before{
-//     display: block;
-//     content: ' ';
-//     position: absolute;
-//     width: 22px;
-//         height: 1px;
-//         left: 0px;
-//         top: 10px;
-//         border: 1px  solid rgba(33, 33, 33, 0.2);
-//         transform: rotate(90deg);
-// }
+.mob-menu-social::before{
+    display: block;
+    content: ' ';
+    position: absolute;
+    width: 22px;
+        height: 1px;
+        left: 0px;
+        top: 10px;
+        border: 1px  solid rgba(33, 33, 33, 0.2);
+        transform: rotate(90deg);
+}
 .mob-menu-social__item{
 position: relative;
     
 }
-.mob-menu-social__item::after {
-            display: block;
-            content: ' ';
-            position: absolute;
-            width: 22px;
-            height: 1px;
-            left: 50px;
-                top: 10px;
-    
-            border: 1px solid rgba(33, 33, 33, 0.2);
-            transform: rotate(90deg);
-        }
+
     
 .mob-menu-social__link {
     color: var(--accent-text-color);
