--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,11 +6,13 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
     background-color: var(--backdrop-color);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &.is-hidden {
             opacity: 0;
             pointer-events: none;
+
         }
 }
 
