--- a/sass/components/_utilits.scss
+++ b/sass/components/_utilits.scss
@@ -30,13 +30,13 @@ a {
     list-style: none;
 
 }
-*,
-::after,
-::before {
-    box-sizing: border-box;
-    max-width: 100%;
-    height: auto;
-}
+// *,
+// ::after,
+// ::before {
+//     box-sizing: border-box;
+//     max-width: 100%;
+//     height: auto;
+// }
 
 .hidden {
     position: absolute;
