--- a/css/main.css
+++ b/css/main.css
@@ -71,15 +71,16 @@ body {
 }
 
 .section__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
 }
 @media screen and (min-width: 480px) {
   .section__title {
     margin-bottom: 30px;
+    font-size: 28px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -87,9 +88,10 @@ body {
     margin-bottom: 30px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .section__title {
     margin-bottom: 50px;
+    font-size: 36px;
   }
 }
 
@@ -123,14 +125,6 @@ a {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-*,
-::after,
-::before {
-  box-sizing: border-box;
-  max-width: 100%;
-  height: auto;
 }
 
 .hidden {
@@ -182,8 +176,12 @@ a {
 }
 
 .menu-mobile {
+  position: absolute;
+  z-index: 2;
   background-color: transparent;
   border: none;
+  top: 10px;
+  right: 15px;
   margin: 0;
   padding: 0;
 }
@@ -205,27 +203,30 @@ a {
 }
 
 .logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  display: block;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  text-decoration: none;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 28px;
+    line-height: 1.1071;
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
 }
 .logo .logo__web {
   display: inline-block;
   color: var(--accent-text-color);
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  text-decoration: none;
 }
 .logo .logo__studio {
   color: var(--logo-text-studio);
   font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  text-decoration: none;
-  padding-top: 24px;
-  padding-bottom: 25px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -296,6 +297,19 @@ a {
 .contacts-header .contacts-header__icon {
   margin-right: 10px;
 }
+@media screen and (min-width: 768px) {
+  .contacts-header .contacts-header__item {
+    margin-bottom: 10px;
+  }
+}
+.contacts-header .contacts-header__item:last-child {
+  margin-bottom: 0;
+}
+@media screen and (min-width: 1200px) {
+  .contacts-header .contacts-header__item {
+    margin-right: 30px;
+  }
+}
 .contacts-header .contacts-header__link {
   display: none;
 }
@@ -303,8 +317,6 @@ a {
   .contacts-header .contacts-header__link {
     display: flex;
     align-items: normal;
-    padding-bottom: 10px;
-    margin-left: 30px;
     fill: var(--primary-text-color);
     color: var(--primary-text-color);
     font-weight: 500;
@@ -327,10 +339,9 @@ a {
 @media screen and (min-width: 1200px) {
   .contacts-header .contacts-header__link {
     display: flex;
-    align-items: normal;
+    align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    margin-left: 30px;
     fill: var(--primary-text-color);
     color: var(--primary-text-color);
     font-weight: 500;
@@ -353,15 +364,18 @@ a {
 
 .mobile-menu {
   z-index: 1;
-  position: absolute;
+  position: fixed;
   display: none;
-  top: 100%;
+  top: 0;
   left: 0;
   width: 100%;
   background-color: var(--header-bg-color);
   width: 100vw;
   height: 100vh;
   overflow-y: auto;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
 }
 .mobile-menu .conteiner {
   display: flex;
@@ -433,11 +447,12 @@ a {
 }
 
 .mob-menu-social {
+  position: relative;
   display: flex;
   padding-bottom: 48px;
 }
 
-.mob-menu-social::before {
+.mob-menu-social__item::before {
   display: block;
   content: " ";
   position: absolute;
@@ -445,24 +460,25 @@ a {
   height: 1px;
   left: 0px;
   top: 10px;
+  margin-left: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   transform: rotate(90deg);
 }
 
 .mob-menu-social__item {
   position: relative;
-}
-
-.mob-menu-social__link {
-  color: var(--accent-text-color);
   font-weight: 500;
   font-size: 18px;
   line-height: 1.2222;
   letter-spacing: 0.02em;
   margin-right: 20px;
 }
-.mob-menu-social__link:not(:last-child) {
+.mob-menu-social__item:last-child {
   margin-right: 0;
+}
+
+.mob-menu-social__link {
+  color: var(--accent-text-color);
 }
 
 /* основной блок */
@@ -489,7 +505,6 @@ a {
   padding-bottom: 6px;
   padding-left: 22px;
   padding-right: 22px;
-  margin-bottom: 15px;
 }
 .portfolio-nav__btn:hover {
   background-color: var(--accent-text-color);
@@ -607,26 +622,24 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-mobile.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-mobile.jpg);
 }
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-mobile-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-mobile-2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
-    width: 768px;
-    height: 400px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-tablet.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-tablet.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-tablet-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-tablet-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -638,12 +651,12 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/bg-image.png);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-image.png);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-desk-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-desk-2x.jpg);
   }
 }
 .hero .hero__title {
@@ -690,26 +703,24 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-mobile.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-mobile.jpg);
 }
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-mobile-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-mobile-2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
-    width: 768px;
-    height: 400px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-tablet.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-tablet.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-tablet-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-tablet-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -721,12 +732,12 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/bg-image.png);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-image.png);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/overlay-desk-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay-desk-2x.jpg);
   }
 }
 .hero .hero__title {
@@ -776,14 +787,14 @@ a {
 }
 @media screen and (min-width: 768px) {
   .advantage-studio .advantage-studio__item {
-    width: calc(50% - 30px);
+    width: calc((100% - 60px) / 2);
     margin-left: 30px;
     margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .advantage-studio .advantage-studio__item {
-    width: calc(25% - 30px);
+    width: calc((100% - 120px) / 4);
     margin-left: 30px;
     margin-bottom: 30px;
   }
@@ -796,6 +807,12 @@ a {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .advantage-studio .advantage-studio__title {
+    text-align: start;
+  }
 }
 .advantage-studio .advantage-studio__text {
   color: var(--primary-text-color);
@@ -805,12 +822,10 @@ a {
 .advantage-img {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
+  height: 120px;
   border-radius: 4px;
   background-color: var(--comand-bg-color);
-}
-.advantage-img .advantage-img__svg {
-  padding: 25px 0;
 }
 
 .section--outher-bg {
@@ -868,11 +883,11 @@ a {
   padding-right: 32px;
 }
 .team .team__title {
-  margin-bottom: 4px;
+  margin-bottom: 10px;
   color: var(--title-text-color);
   font-size: 18px;
   font-weight: 700;
-  line-height: 2;
+  line-height: 1.875;
   letter-spacing: 0.06em;
   text-align: center;
 }
@@ -885,12 +900,11 @@ a {
 
 .social {
   display: flex;
-  justify-content: space-evenly;
-  margin-left: 10px;
+  justify-content: center;
   margin-top: 16px;
   cursor: pointer;
 }
-.social .social__link {
+.social .social__item {
   display: flex;
   justify-content: center;
   background-color: var(--header-bg-color);
@@ -901,24 +915,20 @@ a {
   fill: var(--customers-border-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social .social__link:hover {
+.social .social__item:hover {
   background-color: var(--accent-text-color);
   fill: var(--header-bg-color);
 }
-.social .social__link:last-child {
+.social .social__item .social__item:last-child {
   margin-right: 0;
 }
 
 .customers {
   margin-bottom: -30px;
-}
-@media screen and (min-width: 480px) {
-  .customers {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-bottom: -30px;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
 }
 @media screen and (min-width: 768px) {
   .customers {
@@ -937,14 +947,11 @@ a {
   }
 }
 .customers .customers__item {
+  height: 92px;
   margin-bottom: 30px;
-}
-@media screen and (min-width: 480px) {
-  .customers .customers__item {
-    width: calc(50% - 30px);
-    margin-left: 30px;
-    margin-bottom: 30px;
-  }
+  width: calc(50% - 30px);
+  margin-left: 30px;
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .customers .customers__item {
@@ -1067,6 +1074,11 @@ a {
     margin-bottom: -30px;
   }
 }
+.progects .progects__links {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 
 .progects__item {
   position: relative;
@@ -1088,6 +1100,10 @@ a {
   .progects__item .progects__item:nth-child(3n) {
     margin-right: 0;
   }
+}
+
+.progects__item:last-child {
+  margin-bottom: 0;
 }
 
 .progects__links {
@@ -1212,14 +1228,12 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 60px;
   margin-bottom: 60px;
 }
 @media screen and (min-width: 768px) {
   .social-footer {
     margin-top: 0;
     margin-bottom: 0;
-    margin-left: 165px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1245,7 +1259,7 @@ a {
 .subscription-footer .subscription-footer__text {
   margin-bottom: 20px;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.1428;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -1287,15 +1301,21 @@ a {
 @media screen and (min-width: 768px) {
   .footer-adaptive {
     display: flex;
-    align-items: normal;
-    margin-left: auto;
-    margin-right: auto;
+    align-items: baseline;
+    justify-content: space-around;
+    width: 100%;
+    margin-bottom: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer-adaptive {
     display: flex;
   }
+}
+
+.footer-tablet {
+  display: flex;
+  margin-bottom: 60px;
 }
 
 .backdrop {
@@ -1446,6 +1466,7 @@ a {
 
 .section--no-pading-top {
   padding-top: 0;
+  padding-bottom: 0;
 }
 
 .direction {
@@ -1460,7 +1481,6 @@ a {
 .direction .direction__item {
   position: relative;
   flex-basis: calc((100% - 60px) / 3);
-  margin-top: 30px;
 }
 .direction .direction__label {
   position: absolute;
@@ -1493,7 +1513,7 @@ a {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  padding-bottom: 40px;
+  margin-bottom: 50px;
 }
 @media screen and (min-width: 768px) {
   .portfolio-nav {
@@ -1510,5 +1530,6 @@ a {
 }
 
 .portfolio-nav__item {
+  margin-bottom: 15px;
   margin-right: 8px;
 }/*# sourceMappingURL=main.css.map */
