--- a/sass/components/_comand.scss
+++ b/sass/components/_comand.scss
@@ -56,11 +56,11 @@
             padding-right: 32px;
         }
                 .team__title {
-                    margin-bottom: 4px;
+                    margin-bottom: 10px;
                     color: var(--title-text-color);
                     font-size: 18px;
                     font-weight: 700;
-                    line-height: 2;
+                    line-height: 1.875;
                     letter-spacing: 0.06em;
                     text-align: center;
                 }
@@ -74,11 +74,10 @@
 
 .social {
         display: flex;
-            justify-content: space-evenly;
-        margin-left: 10px;
+            justify-content: center;
         margin-top: 16px;
         cursor: pointer;
-    .social__link {
+    .social__item {
             display: flex;
             justify-content: center;
             background-color: var(--header-bg-color);
@@ -94,10 +93,10 @@
                 background-color: var(--accent-text-color);
                 fill: var(--header-bg-color);
             }
-    
-            &:last-child {
-                margin-right: 0;
-            }
+        .social__item:last-child {
+            margin-right: 0;
+        }
+            
         }
 }
 
