--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -4,13 +4,12 @@
     // margin-top: 50px;
     // justify-content: space-between;
 margin-bottom: -30px;
-@media screen and (min-width: 480px) {
+
         display: flex;
         flex-wrap: wrap;
         margin-left: -30px;
         margin-bottom: -30px;
-
-    }
+    
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
@@ -28,13 +27,12 @@ margin-bottom: -30px;
     }
     .customers__item {
 
-    
+    height: 92px;
     margin-bottom: 30px;
-    @media screen and (min-width: 480px) {
             width: calc(100% / 2 - 30px);
             margin-left: 30px;
             margin-bottom: 30px;
-        }
+        
         @media screen and (min-width: 768px) {
             width: calc(100% / 3 - 30px);
             margin-left: 30px;
