--- a/sass/components/_direction.scss
+++ b/sass/components/_direction.scss
@@ -1,6 +1,7 @@
 
 .section--no-pading-top {
     padding-top: 0;
+    padding-bottom: 0;
 }
 .direction {
     display: flex;
@@ -11,7 +12,7 @@
     .direction__item {
             position: relative;
             flex-basis: calc((100% - 60px) / 3);
-            margin-top: 30px;
+            
         }
                 .direction__label {
                     position: absolute;
