--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -106,12 +106,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 60px;
         margin-bottom: 60px;
         @media screen and (min-width: 768px){
             margin-top: 0;
                 margin-bottom: 0;
-                margin-left: 165px;
+                
         }
         @media screen and (min-width: 1200px){
             margin-top: 0;
@@ -135,11 +134,15 @@
     .subscription-footer__text {
             margin-bottom: 20px;
             font-weight: 700;
-            font-size: 16px;
+            font-size: 14px;
             line-height: 1.1428;
             letter-spacing: 0.03em;
             text-transform: uppercase;
             color: var(--header-bg-color);
+            // @media screen and (min-width: 1200px){
+            //     font-size: 16px;
+            //     line-height: 1.1428;
+            // }
         }
 }
 .form-footer {
@@ -174,14 +177,20 @@
 .footer-adaptive{
     @media screen and (min-width: 768px) {
             display: flex;
-            align-items: normal;
-            margin-left: auto;
-            margin-right: auto;
+            align-items: baseline;
+            justify-content: space-around;
+            width: 100%;
+            margin-bottom: 60px;
+            
             
 }
 @media screen and (min-width: 1200px){
     display: flex;
 }
+}
+.footer-tablet{
+    display: flex;
+    margin-bottom: 60px;
 }
 
 
