--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -28,8 +28,12 @@
         justify-content: space-between;
 }
 .menu-mobile {
+    position: absolute;
+    z-index: 2;
     background-color: transparent;
     border: none;
+    top: 10px;
+    right: 15px;
     margin: 0;
     padding: 0;
 
