--- a/sass/components/_hero-overlay.scss
+++ b/sass/components/_hero-overlay.scss
@@ -1,7 +1,6 @@
 .hero {
     background-color: var(--hero-bg-color);
     text-align: center;
-    
     padding-top: 118px;
     padding-bottom: 118px;
     background: rgba(47, 48, 58, 0.4);
@@ -15,33 +14,32 @@
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../../images/overlay-mobile.jpg);
+        url(../images/overlay-mobile.jpg);
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx){
                 background-image: linear-gradient(to right,
                             rgba(47, 48, 58, 0.4),
                             rgba(47, 48, 58, 0.4)),
-                        url(../../images/overlay-mobile-2x.jpg);
+                        url(../images/overlay-mobile-2x.jpg);
             }
         
         @media screen and (min-width: 768px) {
-                width: 768px;
-                height: 400px;
+                
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
                 background-image: linear-gradient(to right,
                             rgba(47, 48, 58, 0.4),
                             rgba(47, 48, 58, 0.4)),
-                        url(../../images/overlay-tablet.jpg);
+                        url(../images/overlay-tablet.jpg);
                         @media (min-device-pixel-ratio: 2),
                             (min-resolution: 192dpi),
                             (min-resolution: 2dppx) {
                                 background-image: linear-gradient(to right,
                                         rgba(47, 48, 58, 0.4),
                                         rgba(47, 48, 58, 0.4)),
-                                    url(../../images/overlay-tablet-2x.jpg);
+                                    url(../images/overlay-tablet-2x.jpg);
                             }
             }
                 @media screen and (min-width: 1200px) {
@@ -55,14 +53,14 @@
                 background-image: linear-gradient(to right,
                             rgba(47, 48, 58, 0.4),
                             rgba(47, 48, 58, 0.4)),
-                        url(../../images/bg-image.png);
+                        url(../images/bg-image.png);
                         @media (min-device-pixel-ratio: 2),
                             (min-resolution: 192dpi),
                             (min-resolution: 2dppx) {
                                 background-image: linear-gradient(to right,
                                         rgba(47, 48, 58, 0.4),
                                         rgba(47, 48, 58, 0.4)),
-                                    url(../../images/overlay-desk-2x.jpg);
+                                    url(../images/overlay-desk-2x.jpg);
                             }
 }
 
