--- a/sass/components/_logo-header.scss
+++ b/sass/components/_logo-header.scss
@@ -1,26 +1,30 @@
 .logo {
-    padding-top: 24px;
-    padding-bottom: 25px;
+    display: block;
+    font-family: "Raleway";
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 1.17;
+        text-decoration: none;
+        padding-top: 16px;
+        padding-bottom: 16px;
+        @media screen and (min-width: 1200px){
+            font-size: 28px;
+            line-height: 1.1071;
+            padding-top: 26px;
+                padding-bottom: 26px;
+        }
 
     .logo__web {
         display: inline-block;
         color: var(--accent-text-color);
-        font-family: "Raleway";
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.2;
-        text-decoration: none;
+       
     }
 
     .logo__studio {
         color: var(--logo-text-studio);
         font-family: "Raleway";
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.2;
-        text-decoration: none;
-        padding-top: 24px;
-        padding-bottom: 25px;
+        
+        
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
