--- a/sass/components/_portfolio-nav.scss
+++ b/sass/components/_portfolio-nav.scss
@@ -8,7 +8,8 @@
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
-    padding-bottom: 40px;
+    margin-bottom: 50px;
+    
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: nowrap;
@@ -21,6 +22,7 @@
 }
 
 .portfolio-nav__item {
+    margin-bottom: 15px;
     margin-right: 8px;
 }
 
