--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -33,8 +33,17 @@ color: var(--title-text-color);
     line-height: 1.175;
     text-align: center;
     letter-spacing: 0.02em;
-}
 
+    
+}
+.mobile-menu__link--current {
+            color: var(--accent-text-color);
+            font-weight: 500;
+                font-size: 40px;
+                line-height: 1.175;
+                text-align: center;
+                letter-spacing: 0.02em;
+        }
 .mobile-menu__item {
 
     margin-bottom: 32px;
@@ -42,9 +51,7 @@ color: var(--title-text-color);
         margin-bottom: 0;
     }
 }
-.mobile-menu__link--current{
-    color: var(--accent-text-color);
-}
+
 .contacts-mob-menu {
     
     margin-bottom: 64px;
@@ -61,14 +68,16 @@ color: var(--title-text-color);
         &:last-child {
             margin-bottom: 0;
         }
-    .contacts-mob-menu__link--accent{
-    color: var(--accent-text-color);
-    }
+    
     .contacts-mob-menu__link--small{
         font-weight: 500;
         font-size: 24px;
         line-height: 0.8571;
         letter-spacing: 0.02em;
+        &:hover,
+            &:focus {
+                color: var(--accent-text-color);
+            }
     }
 }
 
@@ -78,15 +87,18 @@ color: var(--title-text-color);
         font-size: 34px;
         line-height: 1.1764;
         letter-spacing: 0.02em;
+        &:hover,
+        &:focus{
+            color: var(--accent-text-color);
+        }
     
 }
 
 .mob-menu-social {
     position: relative;
         display: flex;
-        padding-bottom: 48px;
+        
 
-    
 }
 .mob-menu-social__item::before{
     display: block;
@@ -119,12 +131,17 @@ position: relative;
     &:last-child {
         margin-right: 0;
     }
+       
     
 }
 
     
 .mob-menu-social__link {
-    color: var(--accent-text-color);
+    color: var(--primary-text-color);
+    &:hover,
+        &:focus {
+            color: var(--accent-text-color);
+        }
         
         }
 // .mob-menu-top,
