--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,6 +9,19 @@
     overflow-y: scroll;
     background-color: var(--backdrop-color);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding-bottom: 95px;
+        padding-top: 95px;
+        padding-left: 15px;
+        padding-right: 15px;
+        @media screen and (min-width: 768px) {
+        padding-bottom: 207px;
+            padding-top: 208px;
+            padding-left: 159px;
+            padding-right: 159px;
+        }
+                @media screen and (min-width: 1200px){
+                    
+                }
     &.is-hidden {
             opacity: 0;
             pointer-events: none;
@@ -17,19 +30,19 @@
 }
 
 .modal {
-    position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        justify-content: flex-end;
-        width: 480px;
-        min-height: 609px;
+        position: relative;
         background-color: var(--header-bg-color);
         border-radius: 4px;
         padding: 40px;
+        @media screen and (min-width: 768px){
+
+        }
         @media screen and (min-width: 1200px){
-            min-width: 528px;
-            min-height: 521px;
+        position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            justify-content: flex-end;
         }
     
     .modal__title {
@@ -43,7 +56,7 @@
 }
 
 .form {
-    width: 448px;
+    // width: 448px;
 }
 
 .form-field {
